improve tmux config

--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -10,15 +10,9 @@ set -g history-limit 50000
 # tmux messages are displayed for 4 seconds
 set -g display-time 4000
 
-# refresh 'status-left' and 'status-right' more often
-set -g status-interval 5
 
 # upgrade $TERM
-set -g default-terminal "screen-256color"
-
-# emacs key bindings in tmux command prompt (prefix + :) are better than
-# vi keys, even for vim users
-#set -g status-keys emacs
+set -g default-terminal "tmux-256color"
 
 # focus events enabled for terminals that support them
 set -g focus-events on
@@ -31,6 +25,32 @@ setw -g aggressive-resize on
 
 set -q -g status-utf8 on                  # expect UTF-8 (tmux < 2.2)
 setw -q -g utf8 on
+
+set -g status on
+# refresh 'status-left' and 'status-right' more often
+set -g status-interval 5
+set -g status-justify left
+set -g status-position bottom
+set -g status-keys vi
+# Set status bar background and foreground color.
+set -g status-style fg=colour136,bg="#002b36"
+set -g status-left-style default
+set -g status-left "#[fg=green] ❐ #S #[default]"
+set -g status-right-style default
+
+# Set the inactive window color and style
+set -g window-status-style fg=colour244,bg=default
+set -g window-status-format ' #I #W '
+# Set the active window color and style
+set -g window-status-current-style fg=black,bg=colour136
+set -g window-status-current-format ' #I #W '
+
+# Colors for pane borders(default)
+setw -g pane-border-style fg=green,bg=black
+setw -g pane-active-border-style fg=white,bg=black
+# Active pane normal, other shaded out
+setw -g window-style fg=colour240,bg=colour235
+setw -g window-active-style fg=white,bg=black
 
 # C-b is not acceptable -- Vim uses it
 set-option -g prefix C-a
@@ -47,20 +67,6 @@ set -g set-titles on                        # set terminal title
 set -g set-titles-string '#h ❐ #S ● #I #W'
 
 set -g display-panes-time 800 # slightly longer pane indicators display time
-
-set -g status-interval 10 # redraw status line every 10 seconds
-# Allows for faster key repetition
-set -s escape-time 0
-
-## Status bar all
-set -g status-fg colour236
-#set -g status-bg colour102
-
-# Left
-set -g status-left 'tmux ###S|'
- 
-# Right
-set -g status-right '%a %b %d, %Y %H:%M'
 
 # Notifications
 setw -g monitor-activity on
@@ -123,6 +129,8 @@ if -b 'command -v xsel > /dev/null 2>&1' 'bind-key -T copy-mode-vi y send-keys -
 
 # copy to Ms Windows clipboard
 if -b '[ -c /dev/clipboard ]' 'bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "tmux save-buffer - > /dev/clipboard"'
+
+#bind-key = choose-buffer -O name -N -F "#{buffer_sample}"
 
 # Move windows on the left (/) or on the right (*)
 bind-key / swap-window -t -1
