--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -12,7 +12,7 @@ set -g display-time 4000
 
 
 # upgrade $TERM
-set -g default-terminal "tmux-256color"
+set -g default-terminal "screen-256color"
 
 # focus events enabled for terminals that support them
 set -g focus-events on
