add extrakto plugin based on fzf

--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -143,8 +143,8 @@ bind r source-file ~/.tmux.conf \; display-message "config reloaded!"
 # Plugins
 
 set -g @plugin 'tmux-plugins/tpm'
-#set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'laktak/extrakto'
 
 # Resurrect plugin configuration
 
