--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -143,14 +143,11 @@ bind r source-file ~/.tmux.conf \; display-message "config reloaded!"
 # Plugins
 
 set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'laktak/extrakto'
 
-# Resurrect plugin configuration
-
-set -g @resurrect-capture-pane-contents 'off'
-set -g @resurrect-processes 'ssh'
-set -g @resurrect-never-overwrite 'off'
+# tmux color scheme
+set -g @plugin 'seebi/tmux-colors-solarized'
+set -g @colors-solarized '256'
 
 # run tpm
 run -b '~/.tmux/plugins/tpm/tpm'
