validate Windows Terminal/WSL compatibility

--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -95,6 +95,7 @@ bind-key -n C-M-j resize-pane -D 1
 bind-key -n C-M-k resize-pane -U 1
 
 # Use Alt-arrow keys without prefix key to switch panes
+# (not supported by Windows Terminal)
 bind-key -n M-Left select-pane -L
 bind-key -n M-Right select-pane -R
 bind-key -n M-Up select-pane -U
@@ -144,10 +145,6 @@ bind r source-file ~/.tmux.conf \; display-message "config reloaded!"
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'laktak/extrakto'
-
-# tmux color scheme
-set -g @plugin 'seebi/tmux-colors-solarized'
-set -g @colors-solarized '256'
 
 # run tpm
 run -b '~/.tmux/plugins/tpm/tpm'
