--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -131,8 +131,6 @@ if -b 'command -v xsel > /dev/null 2>&1' 'bind-key -T copy-mode-vi y send-keys -
 # copy to Ms Windows clipboard
 if -b '[ -c /dev/clipboard ]' 'bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "tmux save-buffer - > /dev/clipboard"'
 
-#bind-key = choose-buffer -O name -N -F "#{buffer_sample}"
-
 # Move windows on the left (/) or on the right (*)
 bind-key / swap-window -t -1
 bind-key * swap-window -t +1
@@ -145,6 +143,7 @@ bind r source-file ~/.tmux.conf \; display-message "config reloaded!"
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'laktak/extrakto'
+set -g @extrakto_split_size "10"
 
 # run tpm
 run -b '~/.tmux/plugins/tpm/tpm'
