--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -46,11 +46,8 @@ set -g window-status-current-style fg=black,bg=colour136
 set -g window-status-current-format ' #I #W '
 
 # Colors for pane borders(default)
-setw -g pane-border-style fg=green,bg=black
-setw -g pane-active-border-style fg=white,bg=black
-# Active pane normal, other shaded out
-setw -g window-style fg=colour240,bg=colour235
-setw -g window-active-style fg=white,bg=black
+setw -g pane-border-style fg=colour240,bg=default
+setw -g pane-active-border-style fg=green,bg=default
 
 # C-b is not acceptable -- Vim uses it
 set-option -g prefix C-a
