change tmux keys

--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -61,7 +61,7 @@ setw -g automatic-rename on # rename window to reflect current program
 set -g renumber-windows on # renumber windows when a window is closed
 
 set -g set-titles on                        # set terminal title
-set -g set-titles-string '#h ❐ #S ● #I #W'
+set -g set-titles-string '❐ #S ● #I #W'
 
 set -g display-panes-time 800 # slightly longer pane indicators display time
 
@@ -81,26 +81,19 @@ bind-key a send-prefix
 setw -g monitor-activity on
 set -g visual-activity on
 
-# Splitting windows into panes with h and v
+# Split windows into panes: CTRL-A + h or v
 bind-key h split-window -v -c '#{pane_current_path}'
 bind-key v split-window -h -c '#{pane_current_path}'
 
-# Set up resize-pane keys
+# Set up resize-pane keys: CTRL-ALT + h l j k
 bind-key -n C-M-h resize-pane -L 1
 bind-key -n C-M-l resize-pane -R 1
 bind-key -n C-M-j resize-pane -D 1
 bind-key -n C-M-k resize-pane -U 1
 
-# Use Alt-arrow keys without prefix key to switch panes
-# (not supported by Windows Terminal)
-bind-key -n M-Left select-pane -L
-bind-key -n M-Right select-pane -R
-bind-key -n M-Up select-pane -U
-bind-key -n M-Down select-pane -D
-
-# Shift arrow to switch windows
-bind-key -n S-Left previous-window
-bind-key -n S-Right next-window
+# Switch windows: CTRL-ALT + left or right arrows
+bind-key -n C-M-Left previous-window
+bind-key -n C-M-Right next-window
 
 set-window-option -g mode-keys vi
 
