add zoom indicator

--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -42,7 +42,7 @@ set -g window-status-style fg=colour244,bg=default
 set -g window-status-format ' #I #W '
 # Set the active window color and style
 set -g window-status-current-style fg=black,bg=colour136
-set -g window-status-current-format ' #I #W '
+set -g window-status-current-format '#{?window_zoomed_flag,#[fg=red](,}#I #W#{?window_zoomed_flag,#[fg=red]),}'
 
 # Colors for pane borders(default)
 setw -g pane-border-style fg=colour240,bg=default
