--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -131,8 +131,7 @@ bind r source-file ~/.tmux.conf \; display-message "config reloaded!"
 # Plugins
 
 set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'laktak/extrakto'
-set -g @extrakto_split_size "10"
+set -g @plugin 'roosta/tmux-fuzzback'
 
 # run tpm
 run -b '~/.tmux/plugins/tpm/tpm'
