--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -131,7 +131,9 @@ bind r source-file ~/.tmux.conf \; display-message "config reloaded!"
 # Plugins
 
 set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'roosta/tmux-fuzzback'
+#set -g @plugin 'roosta/tmux-fuzzback'
+set -g @plugin 'laktak/extrakto'
+
 
 # run tpm
 run -b '~/.tmux/plugins/tpm/tpm'
