--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -128,12 +128,14 @@ bind-key * swap-window -t +1
 unbind r
 bind r source-file ~/.tmux.conf \; display-message "config reloaded!"
 
+# plugin last_command_output
+set -g @command-capture-prompt-pattern '$ ' 
+set -g @command-capture-editor-cmd 'gedit -'
+
 # Plugins
-
 set -g @plugin 'tmux-plugins/tpm'
-#set -g @plugin 'roosta/tmux-fuzzback'
 set -g @plugin 'laktak/extrakto'
-
+set -g @plugin 'artemave/tmux_capture_last_command_output'
 
 # run tpm
 run -b '~/.tmux/plugins/tpm/tpm'
