power-zoom plugin

--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -132,10 +132,14 @@ bind r source-file ~/.tmux.conf \; display-message "config reloaded!"
 set -g @command-capture-prompt-pattern '$ ' 
 set -g @command-capture-editor-cmd 'gedit -'
 
+# plugin power zoom
+set -g @power_zoom_trigger 'z'
+
 # Plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'laktak/extrakto'
 set -g @plugin 'artemave/tmux_capture_last_command_output'
+set -g @plugin 'jaclu/tmux-power-zoom'
 
 # run tpm
 run -b '~/.tmux/plugins/tpm/tpm'
