add mode indicator plugin

--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -35,7 +35,8 @@ set -g status-keys vi
 # Set status bar background and foreground color.
 set -g status-style fg=colour136,bg="#002b36"
 set -g status-left-style default
-set -g status-right-style default
+#set -g status-right-style default
+set -g status-right '%Y-%m-%d %H:%M #{tmux_mode_indicator}'
 
 # Set the inactive window color and style
 set -g window-status-style fg=colour244,bg=default
@@ -140,6 +141,7 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'laktak/extrakto'
 set -g @plugin 'artemave/tmux_capture_last_command_output'
 set -g @plugin 'jaclu/tmux-power-zoom'
+set -g @plugin 'MunifTanjim/tmux-mode-indicator'
 
 # run tpm
 run -b '~/.tmux/plugins/tpm/tpm'
