add CTRL-A Home as shortcut for favorite command

--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -125,6 +125,9 @@ if -b '[ -c /dev/clipboard ]' 'bind-key -T copy-mode-vi y send-keys -X copy-pipe
 bind-key / swap-window -t -1
 bind-key * swap-window -t +1
 
+# define keystroke to send favorite command defined as env var
+bind-key Home send-keys "$FAVORITE_COMMAND"
+
 # Reload tmux config
 unbind r
 bind r source-file ~/.tmux.conf \; display-message "config reloaded!"
