--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -145,6 +145,7 @@ set -g @plugin 'laktak/extrakto'
 set -g @plugin 'artemave/tmux_capture_last_command_output'
 set -g @plugin 'jaclu/tmux-power-zoom'
 set -g @plugin 'MunifTanjim/tmux-mode-indicator'
+set -g @plugin "arcticicestudio/nord-tmux"
 
 # run tpm
 run -b '~/.tmux/plugins/tpm/tpm'
