--- a/private_dot_config/starship.toml
+++ b/private_dot_config/starship.toml
@@ -1,21 +1,10 @@
 # Inserts a blank line between shell prompts
-add_newline = false
-
-[git_status]
-conflicted = "⚔️ "
-ahead = "🏎️ 💨 ×${count}"
-behind = "🐢 ×${count}"
-diverged = "🔱 🏎️ 💨 ×${ahead_count} 🐢 ×${behind_count}"
-untracked = "🛤️  ×${count}"
-stashed = "📦 "
-modified = "📝 ×${count}"
-staged = "🗃️  ×${count}"
-renamed = "📛 ×${count}"
-deleted = "🗑️  ×${count}"
-style = "bright-white"
-format = "$all_status$ahead_behind"
+add_newline = true
 
 [directory]
 truncation_length = 5
 truncation_symbol = "…/"
 truncate_to_repo = false
+
+[package]
+disabled = true
