mise en place de starship

--- a/private_dot_config/starship.toml
+++ b/private_dot_config/starship.toml
@@ -6,5 +6,13 @@ truncation_length = 5
 truncation_symbol = "…/"
 truncate_to_repo = false
 
+[git_status]
+ahead = "⇡${count}"
+diverged = "⇕⇡${ahead_count}⇣${behind_count}"
+behind = "⇣${count}"
+
 [package]
+disabled = true
+
+[java]
 disabled = true
