set RGB colors (not sure it's needed)

--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -23,6 +23,8 @@ setw -g aggressive-resize on
 # ===========================================================================
 # Other options
 
+set -as terminal-overrides ',xterm*:RGB'
+
 set -q -g status-utf8 on                  # expect UTF-8 (tmux < 2.2)
 setw -q -g utf8 on
 
