Add one more shortcut

--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -109,8 +109,12 @@ if -b '[ -c /dev/clipboard ]' 'bind-key -T copy-mode-vi y send-keys -X copy-pipe
 bind-key / swap-window -t -1
 bind-key * swap-window -t +1
 
-# define keystroke to send favorite command defined as env var
-bind-key Home send-keys "$FAVORITE_COMMAND"
+# define keystrokes to send favorite commands defined as env var
+# ALT-SHIFT-<number>
+bind-key M-1 send-keys "$FAVORITE_COMMAND1"
+bind-key M-2 send-keys "$FAVORITE_COMMAND2"
+bind-key M-3 send-keys "$FAVORITE_COMMAND3"
+bind-key M-4 send-keys "$FAVORITE_COMMAND4"
 
 # Reload tmux config
 unbind r
