--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -11,8 +11,9 @@ set -g history-limit 50000
 set -g display-time 4000
 
 
-# upgrade $TERM
+# screen-256 true color
 set -g default-terminal "screen-256color"
+set -ga terminal-overrides ",xterm-256color:Tc"
 
 # focus events enabled for terminals that support them
 set -g focus-events on
