--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -12,8 +12,8 @@ set -g display-time 4000
 
 
 # screen-256 true color
-set -g default-terminal "screen-256color"
-set -ga terminal-overrides ",xterm-256color:Tc"
+set -g default-terminal "tmux"
+set-option -sa terminal-overrides ",xterm*:Tc"
 
 # focus events enabled for terminals that support them
 set -g focus-events on
