--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -12,7 +12,7 @@ set -g display-time 4000
 
 
 # screen-256 true color
-set -g default-terminal "tmux"
+set -g default-terminal "screen-256color"
 set-option -sa terminal-overrides ",xterm*:Tc"
 
 # focus events enabled for terminals that support them
