Change resize keys: ALT + left, right, down, up

--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -70,11 +70,11 @@ set -g visual-activity on
 bind-key h split-window -v -c '#{pane_current_path}'
 bind-key v split-window -h -c '#{pane_current_path}'
 
-# Set up resize-pane keys: CTRL-ALT + h l j k
-bind-key -n C-M-h resize-pane -L 1
-bind-key -n C-M-l resize-pane -R 1
-bind-key -n C-M-j resize-pane -D 1
-bind-key -n C-M-k resize-pane -U 1
+# Set up resize-pane keys: ALT + left - right - down - up
+bind-key -n M-Left resize-pane -L 1
+bind-key -n M-Right resize-pane -R 1
+bind-key -n M-Down resize-pane -D 1
+bind-key -n M-Up resize-pane -U 1
 
 # Switch windows: CTRL-ALT + left or right arrows
 bind-key -n C-M-Left previous-window
