Auto-rename pane

--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -42,7 +42,6 @@ unbind-key C-b
 set -g base-index 1         # start windows numbering at 1
 setw -g pane-base-index 1   # make pane numbering consistent with windows
 
-setw -g automatic-rename on # rename window to reflect current program
 set -g renumber-windows on # renumber windows when a window is closed
 
 set -g set-titles on                        # set terminal title
@@ -55,8 +54,8 @@ setw -g monitor-activity on
 setw -g visual-activity on
 
 # Auto rename
-set-window-option -g automatic-rename off
-set-option -g allow-rename off
+set-option -g automatic-rename on 
+set-option -g automatic-rename-format '#{b:pane_current_path}'
 
 # Allows us to use C-a a <command> to send commands to a TMUX session inside 
 # another TMUX session
