--- a/private_dot_config/alacritty/alacritty.toml
+++ b/private_dot_config/alacritty/alacritty.toml
@@ -1,1 +1,23 @@
+# Theme Nord
 import = ["~/.config/alacritty/nord.toml"]
+
+# Font configuration
+[font]
+size = 11.0
+
+[font.normal]
+family = "FiraCode Nerd Font Mono"
+style = "Medium"
+
+[font.bold]
+family = "FiraCode Nerd Font Mono"
+style = "Bold"
+
+[font.italic]
+family = "FiraCode Nerd Font Mono"
+style = "Retina"
+
+[font.bold_italic]
+family = "FiraCode Nerd Font Mono"
+style = "SemiBold"
+
