--- a/private_dot_config/starship.toml
+++ b/private_dot_config/starship.toml
@@ -25,10 +25,8 @@ $directory\
 $git_branch$git_commit$git_state$git_metrics$git_status\
 
 [](bg:#8fbcbb fg:#88c0d0)\
-$package$c$cmake$cobol$daml$dart$deno$dotnet$elixir$elm$erlang$fennel$gleam\
-$golang$guix_shell$haskell$haxe$helm$java$julia$kotlin$gradle$lua$nim$nodejs\
-$ocaml$opa$perl$php$pulumi$purescript$python$quarto$raku$rlang$red$ruby$rust\
-$scala$solidity$swift$terraform$typst$vlang$vagrant$zig\
+$package$c$cmake$golang$guix_shell$java$gradle$lua$nim$nodejs\
+$perl$php$python$ruby$rust$scala$typst$vlang$vagrant$zig\
 [](bg:#d9dee9 fg:#8fbcbb)\
 $cmd_duration\
 [](fg:#d9dee9)\
