--- a/private_dot_config/alacritty/alacritty.toml
+++ b/private_dot_config/alacritty/alacritty.toml
@@ -1,6 +1,3 @@
-# Theme Nord
-import = ["~/.config/alacritty/nord.toml"]
-
 # Font configuration
 [font]
 size = 11.0
@@ -20,4 +17,8 @@ style = "Retina"
 [font.bold_italic]
 family = "FiraCode Nerd Font Mono"
 style = "SemiBold"
+
+[general]
+# Theme Nord
+import = ["~/.config/alacritty/nord.toml"]
 
